Stop spinning loading circle overflow

--- a/src/styles/ProjectOverview.css
+++ b/src/styles/ProjectOverview.css
@@ -41,8 +41,16 @@
     }
 }
 
+.loading-circle-wrapper {
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
 .loading-circle {
-    margin: 1em auto;
+    margin-top: 1em;
     border: 0.25rem solid black;
     border-bottom: 0.2rem solid transparent;
     border-radius: 5rem;
